[tool.poetry]
name = "fury"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <4"
Sphinx = ">=5.1.0"
furo = ">=2022.06.21"
sphinx-autobuild = "*"
requests = ">=2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
